# rusty-termcolor

./: Cargo.toml  README.md
docs/: README.md
src/: colors.rs  effects.rs  formatting.rs  lib.rs  system.rs
src/styles/: banners.rs  mod.rs
