[package]
name = "rusty-termcolor"
version = "0.1.62"
edition = "2021"
authors = ["buffer"]
description = "A light-weight terminal coloring library for Rust"
readme = "README.md"
homepage = "https://github.com/pleaseful/rusty-termcolor"
keywords = ["console", "color", "print", "println", "terminal"]
categories = ["command-line-utilities"]
exclude = ["docs/", "rustfmt.toml"]
license-file = "LICENSE.md"

[dependencies]
terminal_size = "0.3"
rand = "0.8"
